# music-light-stick

./: CMakeLists.txt  app.overlay  prj.conf  spec-android.md  spec-ble.md  spec-mcu.md  spec.md
olaf/: hash_table.hpp  olaf_config.c  olaf_config.hpp  olaf_db.c  olaf_db.hpp  olaf_ep_extractor.c  olaf_ep_extractor.hpp  olaf_fp_extractor.hpp  olaf_fp_matcher.c  olaf_fp_matcher.hpp  olaf_fp_ref_mem.h  olaf_max_filter.hpp  olaf_window.h
sch/LightStick/: LightStick.kicad_pcb  LightStick.kicad_prl  LightStick.kicad_pro  LightStick.kicad_sch  MDBT50Q-U_52840_230606.lbr  fp-info-cache  sym-lib-table
sch/LightStick-LED/: LightStick-LED.kicad_pcb  LightStick-LED.kicad_prl  LightStick-LED.kicad_pro
sch/LightStick-MIC/: LightStick-MIC.kicad_pcb  LightStick-MIC.kicad_prl  LightStick-MIC.kicad_pro  LightStick-MIC.kicad_sch  fp-info-cache
src/: ble_service.c  ble_service.h  ble_service.hpp  button.c  button.h  button_handler.hpp  color_utils.c  color_utils.h  color_utils.hpp  effect_engine.c  effect_engine.h  effect_engine.hpp  effect_mode.hpp  effect_types.h  led_controller.c  led_controller.h  led_controller.hpp  main.c  main.cpp  olaf.hpp  pdm.hpp  power_manager.c  power_manager.h  power_manager.hpp  preset_manager.c  preset_manager.h  preset_manager.hpp  preview_manager.c  preview_manager.h  preview_manager.hpp  settings_manager.hpp  slab.hpp
xiao-sch/: .gitignore
xiao-sch/LightStick/: LightStick.kicad_pcb  LightStick.kicad_prl  LightStick.kicad_sch  fp-info-cache
xiao-sch/LightStick-LED/: LightStick-LED.kicad_pcb  LightStick-LED.kicad_prl  LightStick-LED.kicad_sch
(+5 files in other folders)
